objects/Mobile_Card__c.object
<CustomObject>
    <fields>
        <fullName>AM_CrowdCompass__c</fullName>
        <formula>Text(Opportunity__r.Account.AM_CrowdCompass__c)</formula>
        <label>AM-CrowdCompass</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Event_Cloud__c</fullName>
        <description>Field created on request of Sushil Kapoor #11173973</description>
        <formula>Text( Contract_Account_New__r.AM_Event__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM - Event Cloud</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Integration__c</fullName>
        <label>API Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A2Z</fullName>
                </value>
                <value>
                    <fullName>CompuSystems</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>eTouches</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>Partner API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>CASESAFEID(Contract_Account_New__r.Id)</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Time_Zone__c</fullName>
        <formula>Contract_Account_New__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Features__c</fullName>
        <label>Additional Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Addtl Instncs Multi/City/Selection/Lang</fullName>
                </value>
                <value>
                    <fullName>Advertising/Sponsorships</fullName>
                </value>
                <value>
                    <fullName>Beacons</fullName>
                </value>
                <value>
                    <fullName>Blackberry 10</fullName>
                </value>
                <value>
                    <fullName>Contact Capture</fullName>
                </value>
                <value>
                    <fullName>Custom Development</fullName>
                </value>
                <value>
                    <fullName>Geofences</fullName>
                </value>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>Mobile App Survey</fullName>
                </value>
                <value>
                    <fullName>Photobooth</fullName>
                </value>
                <value>
                    <fullName>Push messages</fullName>
                </value>
                <value>
                    <fullName>Radio Feed FM</fullName>
                </value>
                <value>
                    <fullName>Scavenger Hunt</fullName>
                </value>
                <value>
                    <fullName>Social Wall (Premium)</fullName>
                </value>
                <value>
                    <fullName>Trivia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adherence_to_Project_Plan_and_Timelines__c</fullName>
        <label>Adherence to Project Plan and Timelines</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Profile</label>
        <referenceTo>EB_Agent_Profile__c</referenceTo>
        <relationshipLabel>Mobile Apps</relationshipLabel>
        <relationshipName>Mobile_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Android_Build__c</fullName>
        <label>Android Build #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Android_Submission_by__c</fullName>
        <label>Android Submission by</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Build_Premium_check__c</fullName>
        <formula>IF( 
INCLUDES(Attributes__c,"App Build Premium"),True,False 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Build Premium check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Builder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App Builder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mobile_Apps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Description__c</fullName>
        <label>App Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>App_Display_Name__c</fullName>
        <label>App Display Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Event__c</fullName>
        <label>App/Event?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Keywords__c</fullName>
        <label>App Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>App_Links__c</fullName>
        <label>EC App URL Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>App_Name__c</fullName>
        <label>App Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>App_OID__c</fullName>
        <label>App OID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Type__c</fullName>
        <label>App Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>V2 App</fullName>
                </value>
                <value>
                    <fullName>V3 Personal App</fullName>
                </value>
                <value>
                    <fullName>V3 CC App</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Version__c</fullName>
        <label>App Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>V2</fullName>
                </value>
                <value>
                    <fullName>V3</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>3.1</fullName>
                </value>
                <value>
                    <fullName>3.2</fullName>
                </value>
                <value>
                    <fullName>3.3</fullName>
                </value>
                <value>
                    <fullName>3.4</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>3.6</fullName>
                </value>
                <value>
                    <fullName>3.7</fullName>
                </value>
                <value>
                    <fullName>3.8</fullName>
                </value>
                <value>
                    <fullName>3.9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apple_OID__c</fullName>
        <label>App OID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Onsite_Support_Rep__c</fullName>
        <label>Assigned Onsite Support Rep</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <inlineHelpText>Number of attendees</inlineHelpText>
        <label>Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <label>Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Affinity</fullName>
                </value>
                <value>
                    <fullName>Alliance Tech</fullName>
                </value>
                <value>
                    <fullName>App build platinum</fullName>
                </value>
                <value>
                    <fullName>App Build Plus</fullName>
                </value>
                <value>
                    <fullName>App Build Premium</fullName>
                </value>
                <value>
                    <fullName>Apple Transition</fullName>
                </value>
                <value>
                    <fullName>AttendeeHub</fullName>
                </value>
                <value>
                    <fullName>Click</fullName>
                </value>
                <value>
                    <fullName>Client Directory</fullName>
                </value>
                <value>
                    <fullName>Custom Video 2 Minutes</fullName>
                </value>
                <value>
                    <fullName>Custom Video 5 Minutes</fullName>
                </value>
                <value>
                    <fullName>Cvent Conference Integration</fullName>
                </value>
                <value>
                    <fullName>Cvent Event</fullName>
                </value>
                <value>
                    <fullName>Data loading service</fullName>
                </value>
                <value>
                    <fullName>Design Studio Advanced</fullName>
                </value>
                <value>
                    <fullName>Design Studio - Simple</fullName>
                </value>
                <value>
                    <fullName>DoubleDutch</fullName>
                </value>
                <value>
                    <fullName>Early Adopter – Falcon</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Enterprise Distribution</fullName>
                </value>
                <value>
                    <fullName>European Data Center</fullName>
                </value>
                <value>
                    <fullName>Exception: CC Dev Acct</fullName>
                </value>
                <value>
                    <fullName>Graphics Work</fullName>
                </value>
                <value>
                    <fullName>High Volume</fullName>
                </value>
                <value>
                    <fullName>Hospitality Cloud</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transition</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transition - App Build Plus</fullName>
                </value>
                <value>
                    <fullName>Lead Retrieval</fullName>
                </value>
                <value>
                    <fullName>Live Q&amp;A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Assignment_Date__c</fullName>
        <label>Auto - Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CC_Form_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Form Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMS_Name__c</fullName>
        <label>CMS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSAT Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSAT_age__c</fullName>
        <label>CSAT %age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Customer Questions and Queries logged under Cards</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>CC_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_in_Call_Type__c</fullName>
        <label>Check-in Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Out_Date__c</fullName>
        <label>Closed Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complexity_Level__c</fullName>
        <label>Complexity Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Complexity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Configuration_Amends__c</fullName>
        <label>Configuration Amends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consent_Letter_Necessary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent Letter Necessary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_Letter_URL__c</fullName>
        <label>Consent Letter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contract_Account_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CC_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Date_End__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Opportunity__r.ContractEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Opportunity__r.ContractStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Total__c</fullName>
        <formula>Opportunity__r.New_Contract_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Folder_Name__c</fullName>
        <label>Customer Folder Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Account_ID__c</fullName>
        <formula>Opportunity__r.Account.Cvent_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI_QA_Date__c</fullName>
        <label>DI QA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_QA_Score__c</fullName>
        <label>DI QA Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DI_QA_Test_Cases_Completed__c</fullName>
        <label>DI QA Test Cases Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defects_Known_Issues__c</fullName>
        <label>Defects / Known Issues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Account_Type__c</fullName>
        <label>Developer Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Not Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Don_t_Resubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don't Resubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dont_Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Download_URL__c</fullName>
        <description>This field is created as part of QuickMobile Migration</description>
        <label>Download URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ease_of_App_build_process__c</fullName>
        <label>Ease of App build process</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <inlineHelpText>Account having the event - e.g., John Deere</inlineHelpText>
        <label>End Customer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventCenter_Account_Name__c</fullName>
        <label>EventCenter Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventCenter_Account_URL__c</fullName>
        <label>EventCenter Account URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EventCenter_Event_Name__c</fullName>
        <label>EventCenter Event Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventCenter_Event_URL__c</fullName>
        <label>EventCenter Event URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_City__c</fullName>
        <label>Event City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Country__c</fullName>
        <label>Event Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <label>Event URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <inlineHelpText>Name of venue event is held at</inlineHelpText>
        <label>Event Venue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exhibitors__c</fullName>
        <inlineHelpText>Number of exhibitors</inlineHelpText>
        <label>Exhibitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Features__c</fullName>
        <label>Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>a2z API</fullName>
                </value>
                <value>
                    <fullName>Activity Stream</fullName>
                </value>
                <value>
                    <fullName>Appointments API</fullName>
                </value>
                <value>
                    <fullName>App Security</fullName>
                </value>
                <value>
                    <fullName>Attendee Support</fullName>
                </value>
                <value>
                    <fullName>Beacons</fullName>
                </value>
                <value>
                    <fullName>Click</fullName>
                </value>
                <value>
                    <fullName>Conference API</fullName>
                </value>
                <value>
                    <fullName>Cvent API</fullName>
                </value>
                <value>
                    <fullName>Cvent-CrowdCompass-On-Arrival Integration</fullName>
                </value>
                <value>
                    <fullName>Designer Layout</fullName>
                </value>
                <value>
                    <fullName>Enterprise - In House Distribution</fullName>
                </value>
                <value>
                    <fullName>Enterprise - Store Distribution</fullName>
                </value>
                <value>
                    <fullName>eTouches API</fullName>
                </value>
                <value>
                    <fullName>EventBrite API</fullName>
                </value>
                <value>
                    <fullName>Event Wall</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Gamification</fullName>
                </value>
                <value>
                    <fullName>Graphics Work</fullName>
                </value>
                <value>
                    <fullName>Interactive Map</fullName>
                </value>
                <value>
                    <fullName>Lead Capture</fullName>
                </value>
                <value>
                    <fullName>Lead Retrieval</fullName>
                </value>
                <value>
                    <fullName>Live Q&amp;A</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>OA Standalone</fullName>
                </value>
                <value>
                    <fullName>OnArrival</fullName>
                </value>
                <value>
                    <fullName>Partner API</fullName>
                </value>
                <value>
                    <fullName>Permission Groups</fullName>
                </value>
                <value>
                    <fullName>Polling</fullName>
                </value>
                <value>
                    <fullName>RegOnline API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Time__c</fullName>
        <formula>(Time_Spent_On_Mobile_Card__c +  Time_Spend_On_Related_Cases__c)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time On MobileApp(In Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Time_Right__c</fullName>
        <label>First Time Right?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No - Poor Requirements</fullName>
                </value>
                <value>
                    <fullName>No - Incorrect Field Mapping</fullName>
                </value>
                <value>
                    <fullName>No - Setup incorrect in CMS</fullName>
                </value>
                <value>
                    <fullName>No - Setup Incorrect in Transformation</fullName>
                </value>
                <value>
                    <fullName>Yes - Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Impact_CA__c</fullName>
        <label>High Impact CA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ideal_App_Launch_Date__c</fullName>
        <label>Ideal App Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Survey</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>Implementation_Survey__c.Opportunity__c</valueField>
            </filterItems>
            <infoMessage>Please associate the "Implementation Survey" associated with the Mobile App Opportunity.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Implementation_Survey__c</referenceTo>
        <relationshipLabel>Mobile Apps</relationshipLabel>
        <relationshipName>Mobile_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Info_Required__c</fullName>
        <label>Info Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inquisium_Response_Number__c</fullName>
        <label>Inquisium Response Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <label>Integration Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lanyon Meetings</fullName>
                </value>
                <value>
                    <fullName>Lanyon Events</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>3rd Party PUSH</fullName>
                </value>
                <value>
                    <fullName>3rd Party PULL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_approval_status__c</fullName>
        <label>Integration approval status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single approval</fullName>
                </value>
                <value>
                    <fullName>Multiple approvals</fullName>
                </value>
                <value>
                    <fullName>Planner to make the required edits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lanyon_s_project_ID__c</fullName>
        <label>Lanyon’s project ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_App_Resubmission__c</fullName>
        <label>Last App Resubmission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_App_Resubmission_check__c</fullName>
        <description>#11169818</description>
        <formula>IF(TODAY() - Last_App_Resubmission__c &gt;= 60, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last App Resubmission check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Company_Name__c</fullName>
        <label>Legacy Company Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QuickMobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Migrated_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Legacy Migrated ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Service</fullName>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Advanced-1</fullName>
                </value>
                <value>
                    <fullName>Advanced-2</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Owner__c</fullName>
        <description>This field is created as part of QuickMobile Migration</description>
        <label>License Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>QuickMobile</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Low_Impact_CA__c</fullName>
        <label>Low Impact CA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Exception_Comment__c</fullName>
        <label>Manager Exception -Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email__c</fullName>
        <label>Manager's Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_s_Name__c</fullName>
        <label>Manager's Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maps__c</fullName>
        <description>Number of Maps</description>
        <label>Maps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medium_Impact_CA__c</fullName>
        <label>Medium Impact CA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_App_Owner_Id_18_digit__c</fullName>
        <formula>CASESAFEID(OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile App Owner Id(18 digit)</label>
        <type>Text</type>
    </fields>
</CustomObject>